--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </span>
               </div>
             </div>
-            <button class="start">Let’s make a cake</button>
+            <button class="start">CHÚC - EM - GÁI - SINH - NHẬT - VUI - VẺ - NGÀY - CÀNG - XINH - ĐẸP - VÀ  - ĂN - ÍT - THÔI - NHA 🎉🎉🎊🎊🤩😍🤩</button>
           </div>
           <div class="birthday_inner__stage stage2">
             <h1>Let’s get mixing</h1>
